# SPTAG

IVF/: .gitignore  CMakeLists.txt  library.cpp
IVF/inc/: BooleanQuery.h  BooleanScorer.h  BulkScorer.h  Collector.h  DocVectorItem.h  FowardDefine.h  IndexSearcher.h  KeyVector.h  KeywordQuery.h  PostingItem.h  PostingItemIter.h  SimpleScorer.h  Statistics.h  TermTfidfScoreScheme.cpp  TermTfidfScoreScheme.h  TopDocs.h  VectorScoreScheme.h  api.h
IVF/inc/interfaces/: Keyword.h  Query.h  ScoreScheme.h  Scorer.h
IVF/inc/utils/: Bits.h  DistanceFunction.h  DocPriorityQueue.h  DocWithScore.h
IVF/src/: BooleanQuery.cpp  BooleanScorer.cpp  BulkScorer.cpp  IndexSearcher.cpp  KeyVector.cpp  KeywordQuery.cpp  PostingItemIter.cpp  Scorer.cpp  SimpleScorer.cpp  Statistics.cpp  VectorScoreScheme.cpp
